--- a/about.Rmd
+++ b/about.Rmd
@@ -2,8 +2,21 @@
 title: "About Me"
 ---
 
-I was born and grown up mostly in the (relatively) central and eastern part of the main island in Japan. I was born in the Prefecture called 'Aichi', which is well-known for the car manufacturing industry where Toyota is headquartered. My first language acquisition took place in Saitama near Tokyo, where I spent the first five years of my life. I moved back to Aichi when I was six and spent the rest of my life (before moving to Europe) there.
+# Japan
+
+```{r echo = FALSE, out.width = "25%", out.extra='style="float:right; padding:10px"'}
+
+knitr::include_graphics("images/okazaki_castle.jpg")
+```
+
+My home country is Japan, a country located in the Far East. I have lived in places called Saitama near Tokyo and Aichi in the central part of the main island. I believed until recently that I acquired Tokyo Japanese, but my Japanese seems to pick up features heard in the region of Aichi and Gifu, which to my Tokyo friends sounds like a western accent. 
+
+My family also lives in Aichi, but also in some other places including Kobe and Yamaguchi. 
 
 
+# Travelling
 
-My first language is Japanese. I consider myself as a Tokyo Japanese speaker given that I was grown up near Tokyo when I was a young child, and I seem to have picked up some feature of the regional dialects in Aichi after I moved there. Aichi has several dialects, with a few notable regional variations. Geographically, Aichi could be divided in three regions: Owari (west), Nagoya (the main city of the prefecture), and Mikawa (east), and each area is associated with its own dialect: Owari-ben, Nagoya-ben, and Mikawa-ben, where the suffix '-ben' refers to something like 'dialect'. My hometown in Aichi is the easternmost city in the Owari region called Ichinomiya, which shares the boarder with another prefecture 'Gifu'. This is how I have picked up the features from Tokyo Japanese, the Owari dialect and the Mino dialect (a regional accent in the neighbouring Gifu prefecture). 
+I enjoy travelling when I have free time (and money!). My favourite way of travelling is to 
+
+
+# Drinking
