--- a/research.Rmd
+++ b/research.Rmd
@@ -49,13 +49,13 @@ University press articles (in Japanese) when I brought the ultrasound machine to
 knitr::include_graphics("images/newsounds2022.jpeg")
 ```
 
-As a second language English learner myself, I'm also interested in understanding how L2 learners could improve their pronunciation and listening skills. Specific interests include the use of technology in improving L2 fluency and teaching of L2 listening within the world Englishes paradigm.
+As a second language English learner myself, I'm also interested in understanding how L2 learners could improve their pronunciation and listening skills. Specific interests include the use of technology in improving L2 fluency (with [Atsushi Miura](https://researchmap.jp/atsushimiura)) and teaching of L2 listening within the world Englishes paradigm (with [Prof. Yuri Nishio](https://www.meijo-u.ac.jp/sp/foreign/educator/nishio/)).
 
 ### Peer-reviewed conference paper
 
 - <a href='https://github.com/TakayukiNagamine/takayukinagamine.github.io/raw/main/papers/psllt2021_miura-nagamine.pdf' target='_blank'><img title='psllt2021' alt='psllt2021' src='https://img.icons8.com/officel/20/null/pdf.png' border="0"/></a> &nbsp; Miura, A., & **Nagamine, T.** (2022). Using synchronous computer-mediated communication to develop L2 learners’ oral fluency. In J. Levis & A. Guskaroska (eds.), *Proceedings of the 12th Pronunciation in Second Language Learning and Teaching Conference*, held June 2021 virtually at Brock University, St. Catharines, ON. https://doi.org/10.31274/psllt.13347
 
-- <a href='https://github.com/TakayukiNagamine/takayukinagamine.github.io/raw/main/papers/Nagamine2019PSLLT.pdf' target='_blank'><img title='psllt2019' alt='psllt2019' src='https://img.icons8.com/officel/20/null/pdf.png' border="0"/></a> &nbsp; **Nagamine, T.** (2020). Intelligibility of varieties of English and listeners’ language learning backgrounds. In O. Kang, S. Staples, K. Yaw, & K. Hirschi (Eds.), *Proceedings of the 11th Pronunciation in Second Language Learning and Teaching conference*, Northern Arizona University, September 2019 (pp. 261–269). Ames, IA: Iowa State University.
+- <a href='https://github.com/TakayukiNagamine/takayukinagamine.github.io/raw/main/papers/Nagamine2019PSLLT.pdf' target='_blank'><img title='psllt2019' alt='psllt2019' src='https://img.icons8.com/officel/20/null/pdf.png' border="0"/></a> &nbsp; **Nagamine, T.** (2020). Intelligibility of varieties of English and listeners’ language learning backgrounds. In O. Kang, S. Staples, K. Yaw, & K. Hirschi (Eds.), *Proceedings of the 11th Pronunciation in Second Language Learning and Teaching conference*, Northern Arizona University, September 2019 (pp. 261–269). Ames, IA: Iowa State University. https://iastatedigitalpress.com/psllt/article/id/15430/
 
 
 ### Conference presentation
