--- a/index.Rmd
+++ b/index.Rmd
@@ -25,11 +25,13 @@ knitr::include_graphics("images/profile2.png")
 
 <br>
 <br>
-I am a 3rd year PhD student at Lancaster University, UK. I use ultrasound tongue imaging to investigate articulation in second language speech, particularly English liquids produced by L1 Japanese speakers. 
+I am a final year PhD candidate at Lancaster University, UK. I use ultrasound tongue imaging to investigate articulation in second language speech, particularly English liquids produced by L1 Japanese speakers. 
 
 
 My PhD research is funded by [Japan Student Services Organisation (JASSO)](https://www.jasso.go.jp/ryugaku/scholarship_a/daigakuin/index.html) and [The Murata Science Foundation](https://corporate.murata.com/ja-jp/group/zaidan).
 
+
+My CV can be downloaded [here](https://github.com/TakayukiNagamine/takayukinagamine.github.io/raw/main/papers/Takayuki_Nagamine_CV.pdf) (last updated: 3 June 2023).
 
 Also follow me on:&nbsp;&nbsp;<a href='https://researchmap.jp/takayukinagamine' target='_blank'><img title='researchmap' alt='researchmap' src='https://researchmap.jp/outline/img/researchmap130.gif' border="0"/></a> <a href='https://www.researchgate.net/profile/Takayuki_Nagamine' target='_blank'><img title='researchgate' alt='researchgate' src='https://img.icons8.com/external-tal-revivo-color-tal-revivo/40/null/external-researchgate-a-social-networking-site-for-scientists-and-researchers-to-share-papers-logo-color-tal-revivo.png' /></a> <a href='https://twitter.com/tn75146488' target='_blank'><img title='twitter' alt='twitter' src='https://img.icons8.com/fluency/48/null/twitter-squared.png' /></a> <a href='https://github.com/TakayukiNagamine' target='_blank'><img title='github' alt='github' src='https://img.icons8.com/ios-filled/40/null/github.png' /></a>
 
